Assert JNICritical_lock/safepoint-1 and AdapterHandlerLibrary_lock/safepoint-1

XMLWordPrintable

    • b27
    • aarch64
    • linux

      The following test failed in the JDK20 CI:

      applications/kitchensink/Kitchensink.java

      Here's a snippet from the log file:

      Iteration start: MemAccess at Tue Nov 29 09:53:22 UTC 2022
      Iteration done: SpecJvm2008Batch at Tue Nov 29 09:53:44 UTC 2022
      Iteration start: SpecJvm2008Batch at Tue Nov 29 09:53:44 UTC 2022
       Locks owned:
      Mutex: [0x0000fffe240512c0] AdapterHandlerLibrary_lock - owner: 0x0000fffe242cb380 safepoint-1
      Mutex: [0x0000fffe2404a340] InvokeMethodTable_lock - owner: 0x0000fffe242cb380 safepoint
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/mutex.cpp:449


      The tail of stress stdout is:
      For random generator using seed: -8372404238945427141
      To re-run test with same seed value please add "-Djdk.test.lib.random.seed=-8372404238945427141" to command line.
      Stress process main method is started.
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S151580/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fa29848a-1ecd-4f79-8bf7-b2f30ca80a2c/runs/1ec664d7-660a-4aba-8b42-5156b504b871/workspace/open/src/hotspot/share/runtime/mutex.cpp:449), pid=453744, tid=453756
      # assert(false) failed: Attempting to acquire lock JNICritical_lock/safepoint-1 out of order with lock AdapterHandlerLibrary_lock/safepoint-1 -- possible deadlock
      #
      # JRE version: Java(TM) SE Runtime Environment (20.0+26) (fastdebug build 20-ea+26-1978)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+26-1978, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
      # Problematic frame:
      # V [libjvm.so+0x1455578] Mutex::check_rank(Thread*)+0x278
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S151536/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/da6ac2ef-f41b-49ab-b759-778ae0797224/runs/a09e21de-37ff-430a-8229-5c49bdd6f526/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/core.453744)
      #
      # JFR recording file will be written. Location: /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S151536/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/da6ac2ef-f41b-49ab-b759-778ae0797224/runs/a09e21de-37ff-430a-8229-5c49bdd6f526/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/hs_err_pid453744.jfr
      #
      Unsupported internal testing APIs have been used.

      # An error report file with more information is saved as:
      # /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S151536/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/da6ac2ef-f41b-49ab-b759-778ae0797224/runs/a09e21de-37ff-430a-8229-5c49bdd6f526/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/hs_err_pid453744.log
      [338.367s][warning][os] Loading hsdis library failed
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      ----------System.err:(165/20896)----------

      Here's the crashing thread's stack:

      --------------- T H R E A D ---------------

      Current thread (0x0000fffe242cb380): JavaThread "Attach Listener" daemon [_thread_in_vm, id=453756, stack(0x0000fffdf5c00000,0x0000fffdf5e00000)]

      Stack: [0x0000fffdf5c00000,0x0000fffdf5e00000], sp=0x0000fffdf5dfbd10, free space=2031k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1455578] Mutex::check_rank(Thread*)+0x278 (mutex.cpp:449)
      V [libjvm.so+0x1456048] Mutex::lock(Thread*)+0x38 (mutex.cpp:120)
      V [libjvm.so+0xd32f9c] GCLocker::stall_until_clear()+0x9c (mutexLocker.hpp:206)
      V [libjvm.so+0xc1c6a8] G1CollectedHeap::try_collect_concurrently(GCCause::Cause, unsigned int, unsigned int)+0x518 (g1CollectedHeap.cpp:2175)
      V [libjvm.so+0xc1d508] G1CollectedHeap::collect(GCCause::Cause)+0x78 (g1CollectedHeap.cpp:1989)
      V [libjvm.so+0x946c84] AdapterBlob::create(CodeBuffer*)+0x24 (codeBlob.cpp:310)
      V [libjvm.so+0x1676620] AdapterHandlerLibrary::create_adapter(AdapterBlob*&, int, BasicType*, bool)+0x2d0 (sharedRuntime.cpp:3006)
      V [libjvm.so+0x16774b8] AdapterHandlerLibrary::get_adapter(methodHandle const&)+0x548 (sharedRuntime.cpp:2955)
      V [libjvm.so+0x13e717c] Method::make_adapters(methodHandle const&, JavaThread*)+0x1c (method.cpp:1252)
      V [libjvm.so+0x13e73c8] Method::link_method(methodHandle const&, JavaThread*)+0x138 (method.cpp:1236)
      V [libjvm.so+0x13ee88c] Method::make_method_handle_intrinsic(vmIntrinsicID, Symbol*, JavaThread*)+0x788 (method.cpp:1486)
      V [libjvm.so+0x179d1ac] SystemDictionary::find_method_handle_intrinsic(vmIntrinsicID, Symbol*, JavaThread*)+0x1b8 (systemDictionary.cpp:2067)
      V [libjvm.so+0x12686d8] LinkResolver::lookup_polymorphic_method(LinkInfo const&, Handle*, JavaThread*)+0x7f8 (linkResolver.cpp:446)
      V [libjvm.so+0x126bb78] LinkResolver::resolve_method(LinkInfo const&, Bytecodes::Code, JavaThread*)+0x454 (linkResolver.cpp:756)
      V [libjvm.so+0x126e050] LinkResolver::linktime_resolve_static_method(LinkInfo const&, JavaThread*)+0x3c (linkResolver.cpp:1106)
      V [libjvm.so+0x126e360] LinkResolver::resolve_static_call(CallInfo&, LinkInfo const&, bool, JavaThread*)+0x30 (linkResolver.cpp:1072)
      V [libjvm.so+0x140f218] MethodHandles::resolve_MemberName(Handle, Klass*, int, bool, JavaThread*)+0xb98 (methodHandles.cpp:777)
      V [libjvm.so+0x1411260] MHN_resolve_Mem+0xe0 (methodHandles.cpp:1242)
      J 213 java.lang.invoke.MethodHandleNatives.resolve(Ljava/lang/invoke/MemberName;Ljava/lang/Class;IZ)Ljava/lang/invoke/MemberName; java.base@20-ea (0 bytes) @ 0x0000fffe1905e3c0 [0x0000fffe1905e2c0+0x0000000000000100]
      J 27604 c2 java.lang.invoke.MemberName$Factory.resolveOrFail(BLjava/lang/invoke/MemberName;Ljava/lang/Class;ILjava/lang/Class;)Ljava/lang/invoke/MemberName; java.base@20-ea (79 bytes) @ 0x0000fffe19f4dd88 [0x0000fffe19f4dd00+0x0000000000000088]
      J 31300 c2 java.lang.invoke.DirectMethodHandle.makePreparedLambdaForm(Ljava/lang/invoke/MethodType;I)Ljava/lang/invoke/LambdaForm; java.base@20-ea (798 bytes) @ 0x0000fffe1aa8a364 [0x0000fffe1aa89f00+0x0000000000000464]
      J 362 c2 java.lang.invoke.DirectMethodHandle.preparedLambdaForm(Ljava/lang/invoke/MemberName;Z)Ljava/lang/invoke/LambdaForm; java.base@20-ea (244 bytes) @ 0x0000fffe190e0ff8 [0x0000fffe190e0e40+0x00000000000001b8]
      J 1464 c2 java.lang.invoke.DirectMethodHandle.makeAllocator(Ljava/lang/invoke/MemberName;)Ljava/lang/invoke/DirectMethodHandle; java.base@20-ea (137 bytes) @ 0x0000fffe194125dc [0x0000fffe19412500+0x00000000000000dc]
      J 2965 c2 java.lang.invoke.MethodHandles$Lookup.getDirectConstructorCommon(Ljava/lang/Class;Ljava/lang/invoke/MemberName;Z)Ljava/lang/invoke/MethodHandle; java.base@20-ea (69 bytes) @ 0x0000fffe1974679c [0x0000fffe197466c0+0x00000000000000dc]
      J 2403 c2 java.lang.invoke.MethodHandles$Lookup.unreflectConstructor(Ljava/lang/reflect/Constructor;)Ljava/lang/invoke/MethodHandle; java.base@20-ea (55 bytes) @ 0x0000fffe196210f8 [0x0000fffe19620f80+0x0000000000000178]
      J 2402 c2 java.lang.invoke.MethodHandleImpl$1.unreflectConstructor(Ljava/lang/reflect/Constructor;)Ljava/lang/invoke/MethodHandle; java.base@20-ea (8 bytes) @ 0x0000fffe1962ac38 [0x0000fffe1962abc0+0x0000000000000078]
      J 4398 c2 jdk.internal.reflect.MethodHandleAccessorFactory.newConstructorAccessor(Ljava/lang/reflect/Constructor;)Ljdk/internal/reflect/ConstructorAccessorImpl; java.base@20-ea (84 bytes) @ 0x0000fffe19b1d260 [0x0000fffe19b1d1c0+0x00000000000000a0]
      J 2413 c2 jdk.internal.reflect.ReflectionFactory.newConstructorAccessor(Ljava/lang/reflect/Constructor;)Ljdk/internal/reflect/ConstructorAccessor; java.base@20-ea (144 bytes) @ 0x0000fffe19649bcc [0x0000fffe19649b00+0x00000000000000cc]
      J 2375 c2 java.lang.reflect.Constructor.acquireConstructorAccessor()Ljdk/internal/reflect/ConstructorAccessor; java.base@20-ea (75 bytes) @ 0x0000fffe1961c28c [0x0000fffe1961c180+0x000000000000010c]
      J 2373 c2 java.lang.reflect.Constructor.newInstanceWithCaller([Ljava/lang/Object;ZLjava/lang/Class;)Ljava/lang/Object; java.base@20-ea (51 bytes) @ 0x0000fffe19619a20 [0x0000fffe19619940+0x00000000000000e0]
      J 3487 c2 java.lang.reflect.Constructor.newInstance([Ljava/lang/Object;)Ljava/lang/Object; java.base@20-ea (34 bytes) @ 0x0000fffe198679c4 [0x0000fffe19867940+0x0000000000000084]
      j sun.nio.ch.Util.newMappedByteBufferR(IJLjava/io/FileDescriptor;Ljava/lang/Runnable;Z)Ljava/nio/MappedByteBuffer;+52 java.base@20-ea
      j sun.nio.ch.FileChannelImpl.map(Ljava/nio/channels/FileChannel$MapMode;JJ)Ljava/nio/MappedByteBuffer;+140 java.base@20-ea
      j sun.nio.ch.FileChannelImpl.transferFromFileChannel(Lsun/nio/ch/FileChannelImpl;JJ)J+140 java.base@20-ea
      J 31061 c2 sun.nio.ch.FileChannelImpl.transferFrom(Ljava/nio/channels/ReadableByteChannel;JJ)J java.base@20-ea (169 bytes) @ 0x0000fffe1992c7a0 [0x0000fffe1992c640+0x0000000000000160]
      J 31051 c2 jdk.jfr.internal.ChunksChannel.transferTo(Ljava/nio/channels/FileChannel;)J jdk.jfr@20-ea (134 bytes) @ 0x0000fffe198be0b8 [0x0000fffe198be000+0x00000000000000b8]
      j jdk.jfr.internal.PlatformRecording.lambda$dumpStopped$0(Ljdk/jfr/internal/WriteableUserPath;)Ljava/lang/Object;+38 jdk.jfr@20-ea
      J 31027 c2 jdk.jfr.internal.PlatformRecording$$Lambda$474+0x0000000801465560.call()Ljava/lang/Object; jdk.jfr@20-ea (12 bytes) @ 0x0000fffe19bfd038 [0x0000fffe19bfcfc0+0x0000000000000078]
      J 31024 c2 jdk.jfr.internal.WriteableUserPath$1.run()Ljava/lang/Void; jdk.jfr@20-ea (12 bytes) @ 0x0000fffe1a5a9e3c [0x0000fffe1a5a9dc0+0x000000000000007c]
      j jdk.jfr.internal.WriteableUserPath$1.run()Ljava/lang/Object;+1 jdk.jfr@20-ea
      J 1631 c2 java.security.AccessController.doPrivileged(Ljava/security/PrivilegedExceptionAction;Ljava/security/AccessControlContext;)Ljava/lang/Object; java.base@20-ea (26 bytes) @ 0x0000fffe1946cbdc [0x0000fffe1946cb40+0x000000000000009c]
      j jdk.jfr.internal.WriteableUserPath.doPrivilegedIO(Ljava/util/concurrent/Callable;)V+18 jdk.jfr@20-ea
      j jdk.jfr.internal.PlatformRecording.dumpStopped(Ljdk/jfr/internal/WriteableUserPath;)V+15 jdk.jfr@20-ea
      j jdk.jfr.internal.PlatformRecording.stop(Ljava/lang/String;)Z+166 jdk.jfr@20-ea
      J 30615 c2 jdk.jfr.Recording.stop()Z jdk.jfr@20-ea (10 bytes) @ 0x0000fffe194d6b40 [0x0000fffe194d6ac0+0x0000000000000080]
      j jdk.jfr.internal.dcmd.DCmdStop.execute(Ljdk/jfr/internal/dcmd/ArgumentParser;)V+136 jdk.jfr@20-ea
      J 30518 c2 jdk.jfr.internal.dcmd.AbstractDCmd.execute(Ljava/lang/String;Ljava/lang/String;C)[Ljava/lang/String; jdk.jfr@20-ea (203 bytes) @ 0x0000fffe197b8344 [0x0000fffe197b7800+0x0000000000000b44]
      v ~StubRoutines::call_stub 0x0000fffe18ee017c
      V [libjvm.so+0xe9e8dc] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x5ac (javaCalls.cpp:417)
      V [libjvm.so+0xe9ef00] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, JavaThread*)+0x3b0 (javaCalls.cpp:331)
      V [libjvm.so+0xf18128] JfrJavaCall::call_virtual(JfrJavaArguments*, JavaThread*)+0x328 (jfrJavaCall.cpp:379)
      V [libjvm.so+0xefa560] JfrDCmd::invoke(JfrJavaArguments&, JavaThread*) const+0x1ac (jfrDcmds.cpp:205)
      V [libjvm.so+0xefcd00] JfrDCmd::execute(DCmdSource, JavaThread*)+0x140 (jfrDcmds.cpp:237)
      V [libjvm.so+0xb11e6c] DCmd::parse_and_execute(DCmdSource, outputStream*, char const*, char, JavaThread*)+0x1bc (diagnosticFramework.cpp:409)
      V [libjvm.so+0x60a614] jcmd(AttachOperation*, outputStream*)+0x64 (attachListener.cpp:203)
      V [libjvm.so+0x60c504] attach_listener_thread_entry(JavaThread*, JavaThread*)+0x4a0 (attachListener.cpp:427)
      V [libjvm.so+0xed4170] JavaThread::thread_main_inner()+0x21c (javaThread.cpp:697)
      V [libjvm.so+0x17e3f48] Thread::call_run()+0xf8 (thread.cpp:224)
      V [libjvm.so+0x14f4bc4] thread_native_entry(Thread*)+0x100 (os_linux.cpp:739)
      C [libpthread.so.0+0x7908] start_thread+0x188

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      J 213 java.lang.invoke.MethodHandleNatives.resolve(Ljava/lang/invoke/MemberName;Ljava/lang/Class;IZ)Ljava/lang/invoke/MemberName; java.base@20-ea (0 bytes) @ 0x0000fffe1905e3c0 [0x0000fffe1905e2c0+0x0000000000000100]
      J 27605 c2 java.lang.invoke.MemberName$Factory.resolve(BLjava/lang/invoke/MemberName;Ljava/lang/Class;IZ)Ljava/lang/invoke/MemberName; java.base@20-ea (159 bytes) @ 0x0000fffe190ec0cc [0x0000fffe190ec000+0x00000000000000cc]
      J 27604 c2 java.lang.invoke.MemberName$Factory.resolveOrFail(BLjava/lang/invoke/MemberName;Ljava/lang/Class;ILjava/lang/Class;)Ljava/lang/invoke/MemberName; java.base@20-ea (79 bytes) @ 0x0000fffe19f4dd88 [0x0000fffe19f4dd00+0x0000000000000088]
      J 31300 c2 java.lang.invoke.DirectMethodHandle.makePreparedLambdaForm(Ljava/lang/invoke/MethodType;I)Ljava/lang/invoke/LambdaForm; java.base@20-ea (798 bytes) @ 0x0000fffe1aa8a364 [0x0000fffe1aa89f00+0x0000000000000464]
      J 362 c2 java.lang.invoke.DirectMethodHandle.preparedLambdaForm(Ljava/lang/invoke/MemberName;Z)Ljava/lang/invoke/LambdaForm; java.base@20-ea (244 bytes) @ 0x0000fffe190e0ff8 [0x0000fffe190e0e40+0x00000000000001b8]
      J 1464 c2 java.lang.invoke.DirectMethodHandle.makeAllocator(Ljava/lang/invoke/MemberName;)Ljava/lang/invoke/DirectMethodHandle; java.base@20-ea (137 bytes) @ 0x0000fffe194125dc [0x0000fffe19412500+0x00000000000000dc]
      J 2965 c2 java.lang.invoke.MethodHandles$Lookup.getDirectConstructorCommon(Ljava/lang/Class;Ljava/lang/invoke/MemberName;Z)Ljava/lang/invoke/MethodHandle; java.base@20-ea (69 bytes) @ 0x0000fffe1974679c [0x0000fffe197466c0+0x00000000000000dc]
      J 2403 c2 java.lang.invoke.MethodHandles$Lookup.unreflectConstructor(Ljava/lang/reflect/Constructor;)Ljava/lang/invoke/MethodHandle; java.base@20-ea (55 bytes) @ 0x0000fffe196210f8 [0x0000fffe19620f80+0x0000000000000178]
      J 2402 c2 java.lang.invoke.MethodHandleImpl$1.unreflectConstructor(Ljava/lang/reflect/Constructor;)Ljava/lang/invoke/MethodHandle; java.base@20-ea (8 bytes) @ 0x0000fffe1962ac38 [0x0000fffe1962abc0+0x0000000000000078]
      J 4398 c2 jdk.internal.reflect.MethodHandleAccessorFactory.newConstructorAccessor(Ljava/lang/reflect/Constructor;)Ljdk/internal/reflect/ConstructorAccessorImpl; java.base@20-ea (84 bytes) @ 0x0000fffe19b1d260 [0x0000fffe19b1d1c0+0x00000000000000a0]
      J 2413 c2 jdk.internal.reflect.ReflectionFactory.newConstructorAccessor(Ljava/lang/reflect/Constructor;)Ljdk/internal/reflect/ConstructorAccessor; java.base@20-ea (144 bytes) @ 0x0000fffe19649bcc [0x0000fffe19649b00+0x00000000000000cc]
      J 2375 c2 java.lang.reflect.Constructor.acquireConstructorAccessor()Ljdk/internal/reflect/ConstructorAccessor; java.base@20-ea (75 bytes) @ 0x0000fffe1961c28c [0x0000fffe1961c180+0x000000000000010c]
      J 2373 c2 java.lang.reflect.Constructor.newInstanceWithCaller([Ljava/lang/Object;ZLjava/lang/Class;)Ljava/lang/Object; java.base@20-ea (51 bytes) @ 0x0000fffe19619a20 [0x0000fffe19619940+0x00000000000000e0]
      J 3487 c2 java.lang.reflect.Constructor.newInstance([Ljava/lang/Object;)Ljava/lang/Object; java.base@20-ea (34 bytes) @ 0x0000fffe198679c4 [0x0000fffe19867940+0x0000000000000084]
      j sun.nio.ch.Util.newMappedByteBufferR(IJLjava/io/FileDescriptor;Ljava/lang/Runnable;Z)Ljava/nio/MappedByteBuffer;+52 java.base@20-ea
      j sun.nio.ch.FileChannelImpl.map(Ljava/nio/channels/FileChannel$MapMode;JJ)Ljava/nio/MappedByteBuffer;+140 java.base@20-ea
      j sun.nio.ch.FileChannelImpl.transferFromFileChannel(Lsun/nio/ch/FileChannelImpl;JJ)J+140 java.base@20-ea
      J 31061 c2 sun.nio.ch.FileChannelImpl.transferFrom(Ljava/nio/channels/ReadableByteChannel;JJ)J java.base@20-ea (169 bytes) @ 0x0000fffe1992c7a0 [0x0000fffe1992c640+0x0000000000000160]
      J 31051 c2 jdk.jfr.internal.ChunksChannel.transferTo(Ljava/nio/channels/FileChannel;)J jdk.jfr@20-ea (134 bytes) @ 0x0000fffe198be0b8 [0x0000fffe198be000+0x00000000000000b8]
      j jdk.jfr.internal.PlatformRecording.lambda$dumpStopped$0(Ljdk/jfr/internal/WriteableUserPath;)Ljava/lang/Object;+38 jdk.jfr@20-ea
      J 31027 c2 jdk.jfr.internal.PlatformRecording$$Lambda$474+0x0000000801465560.call()Ljava/lang/Object; jdk.jfr@20-ea (12 bytes) @ 0x0000fffe19bfd038 [0x0000fffe19bfcfc0+0x0000000000000078]
      J 31024 c2 jdk.jfr.internal.WriteableUserPath$1.run()Ljava/lang/Void; jdk.jfr@20-ea (12 bytes) @ 0x0000fffe1a5a9e3c [0x0000fffe1a5a9dc0+0x000000000000007c]
      j jdk.jfr.internal.WriteableUserPath$1.run()Ljava/lang/Object;+1 jdk.jfr@20-ea
      J 1631 c2 java.security.AccessController.doPrivileged(Ljava/security/PrivilegedExceptionAction;Ljava/security/AccessControlContext;)Ljava/lang/Object; java.base@20-ea (26 bytes) @ 0x0000fffe1946cbdc [0x0000fffe1946cb40+0x000000000000009c]
      j jdk.jfr.internal.WriteableUserPath.doPrivilegedIO(Ljava/util/concurrent/Callable;)V+18 jdk.jfr@20-ea
      j jdk.jfr.internal.PlatformRecording.dumpStopped(Ljdk/jfr/internal/WriteableUserPath;)V+15 jdk.jfr@20-ea
      j jdk.jfr.internal.PlatformRecording.stop(Ljava/lang/String;)Z+166 jdk.jfr@20-ea
      J 30615 c2 jdk.jfr.Recording.stop()Z jdk.jfr@20-ea (10 bytes) @ 0x0000fffe194d6b40 [0x0000fffe194d6ac0+0x0000000000000080]
      j jdk.jfr.internal.dcmd.DCmdStop.execute(Ljdk/jfr/internal/dcmd/ArgumentParser;)V+136 jdk.jfr@20-ea
      J 30518 c2 jdk.jfr.internal.dcmd.AbstractDCmd.execute(Ljava/lang/String;Ljava/lang/String;C)[Ljava/lang/String; jdk.jfr@20-ea (203 bytes) @ 0x0000fffe197b8344 [0x0000fffe197b7800+0x0000000000000b44]
      v ~StubRoutines::call_stub 0x0000fffe18ee017c

      The direct code that's acquiring the lock out of order belongs to GC,
      but that collect() call is happening in response to an AdapterBlob::create()
      and we get there from method linking and link resolution. I think there's
      more Runtime code involved here than GC code so I'm starting this bug
      off in hotspot/runtime for initial triage.

            Assignee:
            Coleen Phillimore
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: