8297767: Assert JNICritical_lock/safepoint-1 and AdapterHandlerLibrary_lock/safepoint-1

Reviewed-by: pchilanomate, rehn